# export-facebook-insights-to-bigquery

./: .gitignore  LICENSE  README.md  config.py.example  export_insights.py  insights_table.json  pyproject.toml
